--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 		<footer>
 			<span>&copy 2023 - Анастасия Язвинская</span>
 			<div id="socials">
-				<a href="#"><img src="images/git.png" alt="GitHub link image"></a>
+				<a href="https://github.com/AnastasiaYazvinskaya/Web-mastering"><img src="images/git.png" alt="GitHub link image"></a>
 			</div>
 			<a id="coddy" href="#">Школа программирования и дизайна CODDY</a>
 		</footer>
